# bookflow-audio

./: COMMERCIAL_LICENSE.md  SECURITY.md  agent.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: codeql.yml  python-app.yml
docs/: adr_template.md  backlog.md  coding_standards.md  definition_of_done.md  mvp.md  performance.md  security.md  testing_strategy.md
docs/adr/: 0001_pdf_text_parser.md
installers/: install-linux.sh  install-mac.command  install-win.bat
src/adapters/primary/: cli.py  gui.py
src/adapters/secondary/parsers/: epub_parser.py  multi_format_parser.py  pdf_parser.py  txt_parser.py
src/adapters/secondary/storage/: schema_v1.sql  sqlite_repo.py
src/adapters/secondary/tts/: audio_cache.py  edge_tts_engine.py  espeak_engine.py  piper_engine.py  pyttsx3_engine.py
src/application/: ports.py
src/application/use_cases/: import_book.py  playback.py
src/domain/: exceptions.py  models.py  text.py
src/infrastructure/: gui_main.py  main.py  reader_app.py
tests/fakes/: clock.py  parser.py  repository.py  tts.py
tests/fixtures/: tiny.epub  tiny.txt
tests/integration/cli/: main_e2e_test.py
tests/integration/parsers/: epub_parser_test.py  pdf_parser_test.py  txt_parser_test.py
tests/integration/storage/: sqlite_repo_test.py
tests/integration/tts/: pyttsx3_engine_test.py
tests/unit/: architecture_rules_test.py  ports_test.py  reader_app_test.py  text_test.py
tests/unit/tts/: engine_resilience_test.py
tests/unit/use_cases/: import_book_test.py  playback_test.py
