[project]
name = "lector-de-libros"
version = "0.1.0"
description = "Reproductor MVP offline"
dependencies = []
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "C90", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 4
